refs #14375: Fixed issue with members section covering Edit, Complete and Delete buttons

--- a/app/assets/stylesheets/kite.css
+++ b/app/assets/stylesheets/kite.css
@@ -152,6 +152,10 @@
   margin-bottom: 15px;
 }
 
+.details-section {
+  clear: both;
+}
+
 .details-section p {
     margin: 3px;
 }
